--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       content="Desenvolvedor Front-end & UX/UI Designer Localizado em São Paulo"
     />
     <title>Luan - Desenvolvedor e Designer</title>
+    <link rel="icon" href="img/favicon.svg">
   </head>
   <body>
     <header class="header">
