--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
       content="Desenvolvedor Front-end & UX/UI Designer Localizado em São Paulo"
     />
     <title>Luan - Desenvolvedor e Designer</title>
-    <link rel="icon" href="img/favicon.svg">
+    <link rel="icon" href="img/favicon.svg" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header class="header">
